update email and phone links

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <!-- link this to the email links section -->
           <li><a href="#tel">telephone</a></li>
           <!-- link this to the telephone links section -->
-          <li><a href=""#rel-#frag">relative with fragment</a>></li>
+          <li><a href="#rel-#frag">relative with fragment</a>></li>
           <!-- link this to the relative with fragment links section -->
         </ul>
 
