--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Navigation and Links</title>
+    <title>Navigation and Links | About</title>
     <!-- TO DO: ADD YOUR NAME TO THE AUTHOR TAG HERE -->
     <meta name="author" content="Ryan Mayberry" />
     <meta
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h1>Navigation and Links</h1>
+      <h1>Navigation and Links | About</h1>
 
       <!-- TO DO: CREATE THE NAVIGATION FOR THE SITE HERE -->
       <nav>
